--- a/packages/frontend/src/css/addNewFood.scss
+++ b/packages/frontend/src/css/addNewFood.scss
@@ -14,7 +14,7 @@
 	cursor: pointer;
 
 	.item-content {
-		padding: 0.5rem 1.5rem;
+		padding: 0.75rem 1.5rem;
 		text-align: center;
 	}
 
@@ -24,7 +24,16 @@
 		cursor: auto;
 
 		.item-content {
-			@include active-item-content;	
+			@include active-item-content;
+		}
+		
+		@media screen and (max-width: $large-mobile) {
+			// There's some mysterious padding that messes up the forms of this
+			// and the allFoods component.
+			// This is a shitty fix cos I can't anymore. I want to cry.
+			.form-padding-container {
+				padding: 0rem 1rem 
+			}
 		}
 	}
 }
